<resources>
    <string name="app_name">PCAD APP 2019</string>
    <string name="location">LOCATION</string>
    <string name="ok">OK</string>
    <string name="cerca_parole_parole_frequenti">CERCA LE 3 PAROLE PIÚ FREQUENTI DI OGNI ZONA</string>
    <string name="inserisci_testo_da_cercare">INSERISCI TESTO DA CERCARE</string>
    <string name="benvenuto">BENVENUTO</string>
    <string name="indirizzo_ip_server">IP SERVER</string>
    <string name="inserisci">Inserisci</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_login">PCAD 2019</string>
    <string name="inserire_cognome">Inserire cognome</string>
    <string name="inserire_nome">Inserire nome</string>
    <string name="inserire_location_da_cercare">INSERT LOCATION</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="benvenuti">Benvenuti!</string>
    <string name="start">START</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>
    <string name="up">UP</string>
    <string name="pcadapp">PCAD App</string>
    <string name="image">Logo</string>
    <string name="stampa_testo" />
    <string name="stampaTutto">STAMPA TUTTE LE PAROLE CERCATE</string>
    <string name="output_text">" "</string>
    <string name="print_parole_cercate">Ecco le 3 parole piú cercate di ogni zona:</string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="title_activity_printallactivity">PrintAllActivity</string>
</resources>
