<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context=".PrintAllActivity">

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/thumbnail_height"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:src="@drawable/app5" />

        <TextView
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="bottom"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:text="@string/print_parole_cercate" />

    <TextView
        android:scrollbars = "vertical"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_gravity="center"
        android:text="@string/output_text" />

    <Button
        android:onClick="doGoBack"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/back_to_home" />

</LinearLayout>