<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcadapp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="11dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image"
        android:src="@drawable/app10" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftButton"
        android:layout_alignBottom="@+id/leftButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="doRight"
        android:text="@string/right"
        android:textSize="36sp" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/downButton"
        android:layout_toLeftOf="@+id/downButton"
        android:layout_toStartOf="@+id/downButton"
        android:onClick="doLeft"
        android:text="@string/left"
        android:textSize="36sp" />

    <Button
        android:id="@+id/downButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:onClick="doDown"
        android:text="@string/down"
        android:textSize="40sp" />

    <Button
        android:id="@+id/upButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rightButton"
        android:layout_toEndOf="@+id/leftButton"
        android:layout_toLeftOf="@+id/rightButton"
        android:layout_toRightOf="@+id/leftButton"
        android:layout_toStartOf="@+id/rightButton"
        android:onClick="doUp"
        android:text="@string/up"
        android:textSize="36sp" />


</RelativeLayout>
